# excel_read_update

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: windows-installer.yml
backend/: dataProcessor.js  database.js
frontend/: chart_window.html  chart_window.js  fullscreen_chart.html  fullscreen_chart.js  index.html  main.js  styles.css  tauri_bridge.js
scripts/: copy-vendor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/src/: commands.rs  db.rs  main.rs  processor.rs
