[package]
name = "asset-analyzer"
version = "1.0.0"
description = "Professional financial data analysis with seasonal insights"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

# Native file dialogs (replaces tauri::api::dialog on v2)
rfd = "0.14"

# Excel parsing
calamine = "0.25"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Writing .xlsx
rust_xlsxwriter = "0.75"

[features]

